Refactoring to use ?_expand on 1 fetch instead of using two providers

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <main>
-
+        <article class="employeeInfo">
+            <!-- JS will add employee and their related computers here -->
+        </article>
     </main>
     <script src="./scripts/main.js" type="module"></script>
 </body>
