Employees and their related computers are now displayed on the DOM

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <article class="employeeInfo">
+        <article class="employeeContainer">
             <!-- JS will add employee and their related computers here -->
         </article>
     </main>
