--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <main>
         <article class="employeeContainer">
-            <!-- JS will add employee and their related computers here -->
+            <!-- JS will add employee and their related information here -->
+        </article>
+        <article class="customerContainer">
+            <!-- JS will add customers and their related information here -->
         </article>
     </main>
     <script src="./scripts/main.js" type="module"></script>
