Customer list is now displayed. Still working on making buttons functional

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 </head>
 <body>
     <main>
+        <article class="selections">
+            <button id="seeEmployees" class="selectButton">
+                See Employees
+            </button>
+            <button id="seeCustomers" class="selectButton">
+                See Customers
+            </button>
+        </article>
         <article class="employeeContainer">
             <!-- JS will add employee and their related information here -->
         </article>
