Added ability to switch the page between customers and employees

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Three Blind Mice Consulting</title>
 </head>
 <body>
-    <main>
+    <main class="mainContainer">
         <article class="selections">
             <button id="seeEmployees" class="selectButton">
                 See Employees
